@@ -4,16 +4,27 @@ import com.dotran.example.inventory.application.repository.InventoryRepository;
 import com.dotran.example.inventory.common.annotation.PersistenceAdapter;
 import com.dotran.example.inventory.common.domain.valueobject.InventoryId;
 import com.dotran.example.inventory.common.domain.valueobject.ProductId;
+import com.dotran.example.inventory.common.domain.valueobject.SKU;
+import com.dotran.example.inventory.common.domain.valueobject.StoreId;
 import com.dotran.example.inventory.common.exception.NotFoundException;
 import com.dotran.example.inventory.domain.model.Inventory;
 import com.dotran.example.inventory.infrastructure.mapper.InventoryPersistenceMapper;
 import com.dotran.example.inventory.infrastructure.persistence.entity.InventoryEntity;
+import com.dotran.example.inventory.infrastructure.persistence.entity.StockReservationEntity;
 import com.dotran.example.inventory.infrastructure.persistence.jpa.SpringDataInventoryRepository;
 import lombok.RequiredArgsConstructor;
 
+import java.util.Collection;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
+import java.util.Set;
+import java.util.UUID;
+import java.util.function.Function;
 import java.util.stream.Collectors;
+
+import static java.util.stream.Collectors.toList;
 
 @PersistenceAdapter
 @RequiredArgsConstructor
@@ -45,11 +56,30 @@ public class InventoryPersistenceAdapter implements InventoryRepository {
     }
 
     @Override
-    public List<Inventory> createList(List<Inventory> inventories) {
-        List<InventoryEntity> inventoryEntityList = inventories
+    public List<Inventory> updateBatch(List<Inventory> inventories) {
+        Map<UUID, Inventory> inventoryMap = inventories
                 .stream()
-                .map(mapper::fromInventory)
-                .collect(Collectors.toList());
+                .collect(Collectors.toMap(i -> i.getId().getValue(), Function.identity()));
+
+        List<InventoryEntity> inventoryEntityList = springDataInventoryRepository
+                .findAllById(inventoryMap.keySet());
+
+        Set<UUID> foundIds = inventoryEntityList.stream()
+                .map(InventoryEntity::getId)
+                .collect(Collectors.toSet());
+
+        if (!foundIds.equals(inventoryMap.keySet())) {
+            Set<UUID> missingIds = new HashSet<>(inventoryMap.keySet());
+
+            missingIds.removeAll(foundIds);
+
+            throw new IllegalStateException("Inventory not found: " + missingIds);
+        }
+
+        for (InventoryEntity inventoryEntity : inventoryEntityList) {
+            Inventory inventory = inventoryMap.get(inventoryEntity.getId());
+            mapper.updateInventory(inventory, inventoryEntity);
+        }
 
         List<InventoryEntity> savedInventoryEntities = springDataInventoryRepository
                 .saveAll(inventoryEntityList);
@@ -57,7 +87,23 @@ public class InventoryPersistenceAdapter implements InventoryRepository {
         return savedInventoryEntities
                 .stream()
                 .map(mapper::fromEntity)
-                .collect(Collectors.toList());
+                .collect(toList());
+    }
+
+    @Override
+    public List<Inventory> createBatch(List<Inventory> inventories) {
+        List<InventoryEntity> inventoryEntityList = inventories
+                .stream()
+                .map(mapper::fromInventory)
+                .collect(toList());
+
+        List<InventoryEntity> savedInventoryEntities = springDataInventoryRepository
+                .saveAllAndFlush(inventoryEntityList);
+
+        return savedInventoryEntities
+                .stream()
+                .map(mapper::fromEntity)
+                .collect(toList());
     }
 
     @Override
@@ -68,11 +114,30 @@ public class InventoryPersistenceAdapter implements InventoryRepository {
     }
 
     @Override
+    public List<Inventory> getAllById(Collection<InventoryId> inventoryIds) {
+        return springDataInventoryRepository
+                .findAllById(inventoryIds.stream().map(InventoryId::getValue).toList())
+                .stream()
+                .map(mapper::fromEntity)
+                .collect(toList());
+    }
+
+    @Override
     public List<Inventory> getByProductId(ProductId productId) {
         return springDataInventoryRepository
                 .findAllByStoreProductId(productId.getValue())
                 .stream()
                 .map(mapper::fromEntity)
-                .collect(Collectors.toList());
+                .collect(toList());
+    }
+
+    @Override
+    public List<Inventory> getByStoreIdAndSKUs(StoreId storeId, List<SKU> skus) {
+        return springDataInventoryRepository
+                .findAllByStoreIdAndSkuIn(storeId.getValue(),
+                        skus.stream().map(SKU::getValue).toList())
+                .stream()
+                .map(mapper::fromEntity)
+                .collect(toList());
     }
 }
